A mamarla todo lo de heroku

--- a/principal/templates/profile_details.html
+++ b/principal/templates/profile_details.html
@@ -36,7 +36,7 @@
                     {% if traveller.id == user.traveller.id %}
                     <h2><strong> <i class="fa fa-paypal"></i> {{payments}} </strong></h2>
                     <p><small>Payments</small></p>
-                    <a href="/payment" class="btn btn-info btn-block"><span class="fa fa-plus-circle"></span> {% trans "My payments" %} </a>
+                    <a href="/payment" class="btn btn-info btn-block"> {% trans "My payments" %} </a>
                     {% endif %}
                 </div>
                 <div class="col-xs-12 col-sm-4">
