Vista de estadisticas implementada.

--- a/principal/templates/miscellaneous/footer.html
+++ b/principal/templates/miscellaneous/footer.html
@@ -1,6 +1,6 @@
 <!-- Footer -->
 {% load staticfiles %}
-<footer class="footer">
+<footer class="footer hidden-xs">
     <div class="container">
         <div class="row text-center">
             <div class="col-xs-12">			
