--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -202,6 +202,13 @@ img {
     }
 }
 
+.truncate {
+  width: 300px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 
 /* Sticky footer styles
 -------------------------------------------------- */
