--- a/principal/templates/my_payments.html
+++ b/principal/templates/my_payments.html
@@ -30,7 +30,12 @@
 		                <!-- <td>{{ payment.id|safe }}</td> -->
 		                <td>{{ payment.amount|safe }}</td>
 		                <td>{{ payment.date|date:"D d M Y"|safe }}</td>
-		                <td>{{ payment.coinhistory.concept|safe }}</td>
+		                
+		                {% if  payment.coinhistory %}
+		                	<td>{{ payment.coinhistory.concept|safe }}</td>
+		                {% else %}
+		                	<td>{% trans "Pruchase coins" %}</td>
+		                {% endif %}
 		            </tr>
 		        {% endfor %}
 		        </tbody>
