404 error y 500 error paginas implementadas

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -236,3 +236,8 @@ body {
     border-radius: 0px;
     font-weight: bold;
 }
+
+/* 404 error y 500 error */
+.error-template {padding: 40px 15px;text-align: center;}
+.error-actions {margin-top:15px;margin-bottom:15px;}
+.error-actions .btn { margin-right:10px; }
