Vista de la lista de valoraciones

--- a/principal/templates/public_trip_details.html
+++ b/principal/templates/public_trip_details.html
@@ -56,6 +56,7 @@
                                 </ul>
                                 {% if user.traveller.id == trip.traveller.id %}
                                     <p><br><a href="/trip/edit/{{trip.scorable_ptr_id}}"><i class="fa fa-pencil"></i> Edit</a></p>
+                                    <p><a href="/assessment/list/{{trip.scorable_ptr_id}}"><i class="fa fa-list"></i> Assessments</a></p>
                                 {% endif %}
                                 {% if perms.principal.traveller and trip.state == 'ap' and trip.traveller.id != user.id and assessment == None%}
                                     <div class="center-block">
