Foto de la primera venue en el listado de viajes planificados.

--- a/principal/templates/show_planning.html
+++ b/principal/templates/show_planning.html
@@ -28,7 +28,7 @@
          -->
     <h1>Trip details</h1>
     <div class="row">
-        <div id="map" style="height: 500px;"></div>
+        <div id="map" class="plan-map"></div>
     </div>
     <h2>{{trip.day_set.count}} days in {{trip.city}}, {{trip.country}}</h2>
     <p>Click on the day indicator to show te corresponding plan</p>
