Arreglado el envio de correos

--- a/principal/templates/email/register_confirmation.html
+++ b/principal/templates/email/register_confirmation.html
@@ -585,7 +585,7 @@
 
                         <td valign="top" class="mcnTextContent" style="padding-top: 9px;padding-right: 18px;padding-bottom: 9px;padding-left: 18px;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #FFFFFF;font-family: Helvetica;font-size: 16px;line-height: 150%;text-align: left;">
 
-                            <h1 style="display: block;margin: 0;padding: 0;font-family: Helvetica;font-size: 26px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: normal;text-align: left;color: #FFFFFF !important;">Confirm your account, {{username}}</h1>
+                            <h1 style="display: block;margin: 0;padding: 0;font-family: Helvetica;font-size: 26px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: normal;text-align: left;color: #FFFFFF !important;">Confirm your account, {{name}}</h1>
 
                         </td>
                     </tr>
@@ -627,7 +627,7 @@ Greetings, BrainTravel team.
                     <tbody>
                         <tr>
                             <td align="center" valign="middle" class="mcnButtonContent" style="font-family: Arial;font-size: 16px;padding: 20px;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
-                                <a class="mcnButton " title="Confirm account" href="http://http://fierce-springs-5908.herokuapp.com//confirm_account?hash={{hash}}&username={{username}}&rand_password={{rand_password}}" target="_blank" style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;color: #D55258;word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;display: block;">Confirm account</a>
+                                <a class="mcnButton " title="Confirm account" href="localhost:8000/confirm_account?hash={{hash}}&username={{username}}&rand_password={{rand_password}}" target="_blank" style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;color: #D55258;word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;display: block;">Confirm account</a>
                             </td>
                         </tr>
                     </tbody>
