--- a/principal/templates/list_coin_history.html
+++ b/principal/templates/list_coin_history.html
@@ -36,19 +36,22 @@
 		    </table>
 		</div>
 	</div>
+    
+	<nav class="col-xs-12">
+		<ul class="pager">
+			<li {% if not list_coin_history.has_previous %} class="disabled"{% endif %}>
+				<a {% if list_coin_history.has_previous %} href="?page={{ list_coin_history.previous_page_number }}"{% endif %}><span aria-hidden="true">&laquo;</span></a>
+			</li>
+	
+			<li>
+			  <span>{% trans "Page" %} {{ list_coin_history.number }} {% trans "of" %} {{ list_coin_history.paginator.num_pages }}</span>
+			</li>
+	
+			<li {% if not list_coin_history.has_next %} class="disabled"{% endif %}>
+			  <a {% if list_coin_history.has_next %} href="?page={{ list_coin_history.next_page_number }}"{% endif %}><span aria-hidden="true" class="disabled">&raquo;</span></a></li>
+		</ul>
+	</nav>
 
-    <div class="pagination col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        <span class="step-links">
-            {% if list_coin_history.has_previous %}
-                <a href="?page={{ list_coin_history.previous_page_number }}">previous</a>
-            {% endif %}
-            <span class="current">
-                    Page {{ list_coin_history.number }} of {{ list_coin_history.paginator.num_pages }}.
-            </span>
-            {% if list_coin_history.has_next %}
-                <a href="?page={{ list_coin_history.next_page_number }}">next</a>
-            {% endif %}
-        </span>
-    </div>
 </div>
+
 {% endblock %}
