--- a/principal/templates/public_trip_details.html
+++ b/principal/templates/public_trip_details.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
+{% load i18n %}
 {% block title %} {% trans "Details" %} {% endblock %}
 {% block content %}
-    {% load i18n %}
+    
 <div class="container">
     <h1>{{trip.name}}</h1>
     <div class="row">
@@ -166,19 +167,22 @@
                 {% endfor %}
             </div>
             {% if comments %}
-                <div class="pagination col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    <span class="step-links">
-                        {% if comments.has_previous %}
-                            <a href="?page={{ comments.previous_page_number }}">previous</a>
-                        {% endif %}
-                        <span class="current">
-                            Page {{ comments.number }} of {{ comments.paginator.num_pages }}.
-                        </span>
-                        {% if comments.has_next %}
-                            <a href="?page={{ comments.next_page_number }}">next</a>
-                        {% endif %}
-                    </span>
-                </div>
+                <nav class="col-xs-12">
+	              <ul class="pager">
+	                <li {% if not comments.has_previous %} class="disabled" {% endif %}>
+	                  <a {% if comments.has_previous %} href="?page={{ comments.previous_page_number }}" {% endif %}><span aria-hidden="true">&laquo;</span></a>
+	                </li>
+	                
+	                <li>
+	                 <span>{% trans "Page" %} {{ comments.number }} {% trans "of" %} {{ comments.paginator.num_pages }}</span>
+	                </li>
+	                
+	                <li {% if not comments.has_next %} class="disabled" {% endif %}>
+	                    <a {% if comments.has_next %} href="?page={{ comments.next_page_number }}" {% endif %}><span aria-hidden="true" class="disabled" >&raquo;</span></a>  
+	                </li>
+	              </ul>
+	            </nav>        
+
             {% endif %}
         </div>
     </div>
