--- a/principal/templates/trip_list.html
+++ b/principal/templates/trip_list.html
@@ -40,19 +40,22 @@
                 </div>
             </div>
         {% endfor %}
-        <div class="pagination col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <span class="step-links">
-                {% if trips.has_previous %}
-                    <a href="?page={{ trips.previous_page_number }}">previous</a>
-                {% endif %}
-                <span class="current">
-                    Page {{ trips.number }} of {{ trips.paginator.num_pages }}.
-                </span>
-                {% if trips.has_next %}
-                    <a href="?page={{ trips.next_page_number }}">next</a>
-                {% endif %}
-            </span>
-        </div>
+        
+        <nav class="col-xs-12">
+              <ul class="pager">
+                <li {% if not trips.has_previous %} class="disabled" {% endif %}>
+                  <a {% if trips.has_previous %} href="?page={{ trips.previous_page_number }}" {% endif %}><span aria-hidden="true">&laquo;</span></a>
+                </li>
+                
+                <li>
+                 <span>{% trans "Page" %} {{ trips.number }} {% trans "of" %} {{ trips.paginator.num_pages }}</span>
+                </li>
+                
+                <li {% if not trips.has_next %} class="disabled" {% endif %}>
+                    <a {% if trips.has_next %} href="?page={{ trips.next_page_number }}" {% endif %}><span aria-hidden="true" class="disabled" >&raquo;</span></a>  
+                </li>
+              </ul>
+            </nav>
     {% endif %}
 </div>
 {%endblock%}
