--- a/principal/templates/trip_list.html
+++ b/principal/templates/trip_list.html
@@ -33,10 +33,8 @@
                                 <li><i class="fa fa-thumbs-o-up"></i> {{trip.likes}}</li>
                                 <li>|</li>
                                 <li><i class="fa fa-thumbs-o-down"></i> {{trip.dislikes}}</li>
-                                {% if user.traveller.id == trip.traveller.id %}
                                 <li>|</li>
-                                <li><a href="/assessment/list/{{trip.scorable_ptr_id}}"><i class="fa fa-list"></i> Assessments</a></li>
-                                {% endif %}
+                                <li><i class="fa fa-star fa"></i> {% firstof trip.scorable_ptr.rating  ' -' %} / 10</li>
                                 <li><a href="/public_trip_details/{{trip.scorable_ptr_id}}" style="text-decoration: None;"><i class="fa fa-info-circle"></i> View more</a></li>
                             </ul>
                         </div>
