Títulos con block de traducción

--- a/principal/templates/about_us.html
+++ b/principal/templates/about_us.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %} About us{% endblock %}
+{% block title %} {% trans "About us" %} {% endblock %}
 {% load i18n %}
 {% block content %}
 <div class="container">
