--- a/principal/templates/cookies_policies.html
+++ b/principal/templates/cookies_policies.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
-{% block title %} Cookies policy {% endblock %}
+{% load i18n %}
+{% block title %} {% trans "Cookies policy" %} {% endblock %}
 {% block content %}
-    {% load i18n %}
+
 <div class="container">
     <div class="row">
         <div class="col-lg-12 text-justify">
