--- a/principal/templates/profile_edit_password.html
+++ b/principal/templates/profile_edit_password.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
-{% block title %} Edit password {% endblock %}
+{% load i18n %}
+{% block title %} {% trans "Edit password" %} {% endblock %}
 {% block content %}
-    {% load i18n %}
 <div class="container">
     <div class="row">
         <div class="text-center">
