--- a/principal/templates/buy_coins.html
+++ b/principal/templates/buy_coins.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
-{% block title %} Buy coins {% endblock %}
+{% load i18n %}
+{% block title %} {% trans "Buy coins" %} {% endblock %}
 {% block content %}
-    {% load i18n %}
+    
 <div class="container">
 <div class="text-center">
     <h1>{% trans "Coin packs" %}</h1>
