--- a/principal/templates/error.html
+++ b/principal/templates/error.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
-{% block title %} Error {% endblock %}
+{% load i18n %}
+{% block title %} {% trans "Error" %} {% endblock %}
 {% block content %}
     <h1 class="error-message-search"><i class="fa fa-exclamation-circle"></i> PANIC!!!</h1>
 {% endblock %}
