--- a/principal/templates/error_planning.html
+++ b/principal/templates/error_planning.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
-{% block title %} Search {% endblock %}
-{% block content %}
 {% load i18n %}
+{% block title %} {% trans "Search" %} {% endblock %}
+{% block content %}
 <div class="container">
     <h1>{% trans "Sorry, an error has ocurred" %}</h1>
     	{% blocktrans trimmed %}
