--- a/principal/templates/list_coin_history.html
+++ b/principal/templates/list_coin_history.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %}
-{% block title %} History coin {% endblock %}
-{% block content %}
 {% load i18n %}
-
+{% block title %} {% trans "Coin historial" %} {% endblock %}
+{% block content %}
 
 <div class="container">
     <div class="row">
