--- a/principal/templates/my_payments.html
+++ b/principal/templates/my_payments.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
-{% block title %} Payments {% endblock %}
-{% block content %}
 {% load i18n %}
+{% block title %} {% trans "Payments" %} {% endblock %}
+{% block content %}
 
 <div class="container">
     <div class="row">
