--- a/principal/templates/payment.html
+++ b/principal/templates/payment.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
-{% block title %} My trips {% endblock %}
+{% load i18n %}
+{% block title %} {% trans "My trips" %} {% endblock %}
 {% block content %}
 
  <h1>Show me the money!</h1>
