--- a/principal/templates/plan_creation.html
+++ b/principal/templates/plan_creation.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
-{% block title %} Plan a trip {% endblock %}
-{% block content %}
 {% load i18n %}
+{% block title %} {% trans "Plan a trip" %} {% endblock %}
+{% block content %}
+
 <div class="container">
 
-    <div class="col-xs-12 col-sm-3 col-md-3"></div>
-    <div class="col-xs-12 col-sm-6 col-md-6">
+    <div class="col-xs-12 col-sm-6 col-sm-offset-3">
     <h1 class="page-header">{% trans "Plan a trip" %}</h1>
         <form id="form-create" class="form-horizontal" role="form" action="/planner/list_venues/" method="post"
               data-toggle="validator">
