--- a/principal/templates/privacy_terms.html
+++ b/principal/templates/privacy_terms.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
-{% block title %} Privacy terms {% endblock %}
+{% load i18n %}
+{% block title %} {% trans "Privacy terms" %} {% endblock %}
 {% block content %}
-    {% load i18n %}
+
 <div class="container">
     <div class="row">
         <div class="col-lg-12 text-justify">
