--- a/principal/templates/profile_details.html
+++ b/principal/templates/profile_details.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
-{% block title %} Profile {% endblock %}
+{% load i18n %}
+{% block title %} {% trans "Profile" %} {% endblock %}
 {% block content %}
-    {% load i18n %}
+
 <div class="container">
     <div class="fb-profile">
         <img align="left" class="fb-image-lg" src="/static/img/bg_profile.png" alt="Profile image example"/>
