--- a/principal/templates/profile_edit.html
+++ b/principal/templates/profile_edit.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
-{% block title %} Edit profile {% endblock %}
+{% load i18n %}
+{% block title %} {% trans "Edit profile" %} {% endblock %}
 {% block content %}
-    {% load i18n %}
+
 <div class="container">
     <h1>{% trans "Edit Profile" %}</h1>
     {% if form.errors %}
