--- a/principal/templates/search.html
+++ b/principal/templates/search.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
-{% block title %} Search {% endblock %}
+{% load i18n %}
+{% block title %} {% trans "Search" %} {% endblock %}
 {% block content %}
-    {% load i18n %}
+    
 <div class="container">
     <h1>Search results for "{{ title_search }}"</h1>
     {% if not trip_result %}
