--- a/principal/templates/signin.html
+++ b/principal/templates/signin.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
-{% block title %} Sign in {% endblock %}
-{% block content %}
 {% load i18n %}
+{% block title %} {% trans "Sign in" %} {% endblock %}
+{% block content %}
 
 <div class="container-fluid">
     <div class="omb_login col-xs-12 col-sm-6 col-sm-offset-3 col-lg-4 col-lg-offset-4">
