--- a/principal/templates/trip_list.html
+++ b/principal/templates/trip_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
-{% block title %} Trip list {% endblock %}
+{% load i18n %}
+{% block title %} {% trans "Trip list" %} {% endblock %}
 {% block content %}
-    {% load i18n %}
 <div class="container">
     {% load i18n %}
     <h1>{{ title_list }}</h1>
