--- a/principal/templates/trip_planned_list.html
+++ b/principal/templates/trip_planned_list.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
-{% block title %} Trip list {% endblock %}
-{% block content %}
+{% load i18n %}
+{% block title %} {% trans "Trip list" %} {% endblock %}
 {% load staticfiles %}
-    {% load i18n %}
+{% block content %}
+
 <div class="container">
     {% load i18n %}
     <h1>{{ title_list }}</h1>
